force-app/main/default/objects/ucinn_ascendv2__Custom_Record_Types_To_Process__c/ucinn_ascendv2__Custom_Record_Types_To_Process__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Custom Record Types To Process</label>
</CustomObject>