force-app/main/default/objects/ucinn_ascendv2__Custom_Record_Types_To_Process__c/fields/ucinn_ascendv2__Namespace_Prefix__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Namespace_Prefix__c</fullName>
    <label>Namespace Prefix</label>
    <length>50</length>
    <type>Text</type>
</CustomField>