force-app/main/default/objects/ucinn_ascendv2__Custom_Record_Types_To_Process__c/fields/ucinn_ascendv2__Profiles__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Profiles__c</fullName>
    <description>Profiles that have access to the specified record type. If empty, all profiles have access. Multiple profiles are separately with &apos;;&apos;.</description>
    <inlineHelpText>Profiles that have access to the specified record type. If empty, all profiles have access. Multiple profiles are separately with &apos;;&apos;.</inlineHelpText>
    <label>Profiles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>