force-app/main/default/objects/ucinn_ascendv2__Custom_Record_Types_To_Process__c/fields/ucinn_ascendv2__Record_Type_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Record_Type_Developer_Name__c</fullName>
    <label>Record Type Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>